update some bug
